--- a/index.html
+++ b/index.html
@@ -54,25 +54,25 @@
             <div id="carousel-fade" class="carousel slide carousel-fade mb-1" data-ride="carousel">
               <div class="carousel-inner">
                 <div class="carousel-item active">
-                  <img src="jb-elite.v4.png" class="d-block w-100" alt="...">
+                  <img src="./img/jb-elite.v4.png" class="d-block w-100" alt="...">
                 </div>
                 <div class="carousel-item">
-                  <img src="hero.2.png" class="d-block w-100" alt="...">
+                  <img src="./img/hero.2.png" class="d-block w-100" alt="...">
                 </div>
                 <div class="carousel-item">
-                  <img src="hero.3.png" class="d-block w-100" alt="...">
+                  <img src="./img/hero.3.png" class="d-block w-100" alt="...">
                 </div>
                 <div class="carousel-item">
-                  <img src="hero.4.png" class="d-block w-100" alt="...">
+                  <img src="./img/hero.4.png" class="d-block w-100" alt="...">
                 </div>
                 <div class="carousel-item">
-                  <img src="hero.5.png" class="d-block w-100" alt="...">
+                  <img src="./img/hero.5.png" class="d-block w-100" alt="...">
                 </div>
                 <div class="carousel-item">
-                  <img src="hero.6.png" class="d-block w-100" alt="...">
+                  <img src="./img/hero.6.png" class="d-block w-100" alt="...">
                 </div>
                 <div class="carousel-item">
-                  <img src="hero.7.png" class="d-block w-100" alt="...">
+                  <img src="./img/hero.7.png" class="d-block w-100" alt="...">
                 </div>
                 <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
                   <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -107,7 +107,7 @@
           <a href="http://www.jordanburroughs.com/" target="_blank" class="jb-web text-uppercase d-inline-block btn-soft light">Learn More</a>
         </div>
         <div class="col-md-6 text-center">
-          <img class="img-fluid d-md-block ml-md-auto" src="jb.png" alt="">
+          <img class="img-fluid d-md-block ml-md-auto" src="./img/jb.png" alt="">
         </div>
       </div>
     </div>
@@ -118,7 +118,7 @@
     <div class="container product product-1 mt-5 mb-5">
       <div class="row align-items-md-center">
         <div class="col-md-6 text-center mx-auto order-md-2">
-          <img src="jb-elite.v1.png">
+          <img src="./img/jb-elite.v1.png">
         </div>
         <div class="col-md-6 mb-4 mb-md-0">
           <h2 class="section-heading">JB <span>Elite II</span></h2>
@@ -137,7 +137,7 @@
     <div class="container product product-2 mt-5 mb-5">
       <div class="row align-items-md-center">
         <div class="col-md-6 text-center mx-auto">
-          <img src="jb-elite.v2.png">
+          <img src="./img/jb-elite.v2.png">
         </div>
         <div class="col-md-6 mb-4 mb-md-0">
           <h2 class="section-heading">JB <span>Elite II</span></h2>
@@ -156,7 +156,7 @@
     <div class="container product product-3 mt-5 mb-5">
       <div class="row align-items-md-center">
         <div class="col-md-6 text-center mx-auto order-md-2">
-          <img src="img/jb-elite.v3.png">
+          <img src="./img/jb-elite.v3.png">
         </div>
         <div class="col-md-6 mb-4 mb-md-0">
           <h2 class="section-heading">JB <span>Elite II</span></h2>
@@ -175,7 +175,7 @@
     <div class="container product product-4 mt-5 mb-5">
       <div class="row align-items-md-center">
         <div class="col-md-6 text-center mx-auto">
-          <img src="jb-elite.v4.png">
+          <img src="./img/jb-elite.v4.png">
         </div>
         <div class="col-md-6 mb-4 mb-md-0">
           <h2 class="section-heading">JB <span>Elite IV</span></h2>
