--- a/index.html
+++ b/index.html
@@ -22,16 +22,16 @@
         </div>
         <ul class="nav-list">
           <li class="nav-item">
-            <a href="#home" class="nav-link">Home</a>
+            <a href="#home" class="nav-link my-5">Home</a>
           </li>
           <li class="nav-item">
-            <a href="#about" class="nav-link">About</a>
+            <a href="#about" class="nav-link my-5">About</a>
           </li>
           <li class="nav-item">
-            <a href="#product" class="nav-link">Product</a>
+            <a href="#product" class="nav-link my-5">Product</a>
           </li>
           <li class="nav-item">
-            <a href="#testimonials" class="nav-link">Reviews</a>
+            <a href="#testimonials" class="nav-link my-5">Reviews</a>
           </li>
         </ul>
       </nav>
